# lumia-walker

./: .gitignore  bar.rb  calc.rb  foo.rb  next.config.js  package-lock.json  package.json  simulate.rb  tsconfig.json
.devcontainer/: Dockerfile  app.env.example  docker-compose.yml
components/: BlankItemImage.tsx  BuildSelectForm.tsx  ButtonGroupIconButton.tsx  CharacterImage.tsx  CharacterSelectorForm.tsx  ImageWithTextButton.tsx  Inventory.tsx  ItemBadge.tsx  ItemBuildTree.tsx  ItemButton.tsx  ItemImage.tsx  LumiaIslandMap.tsx  RouteArea.tsx  RoutePlan.tsx  RouteSuggestionForm.tsx  TabPanel.tsx  Tree.tsx  WeaponTypeButton.tsx  WeaponTypeImage.tsx
hooks/: useHomeState.ts  useQueryParamStore.ts  useRouteSuggester.ts
locales/: en.json
lumia-walker/: .gitignore  package-lock.json
map/: area_centroids.json  object_locations.json  walls.json
pages/: _app.js  _document.js  index.tsx  map.tsx
public/locales/en/: common.json
scripts/: download_images  ga  generate_data  generate_map  generate_wip_map  lp  pry  svg_path_d_parser.ry  svg_path_d_parser.tab.rb
scripts/rust-ga/: Cargo.toml
scripts/rust-ga/src/: ga.rs  item_build_guide.rs  lumia_island.rs  main.rs
scripts/rust-tools/: Cargo.toml
scripts/rust-tools/src/: main.rs
utils/: colors.ts  item.ts  lumiaIsland.ts  mapHelpers.ts
wasm/: Cargo.toml
wasm/pkg/: package.json  wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
workers/: routeSuggester.ts
