[package]
name = "rust-ga"
version = "0.1.0"
authors = ["Fumiaki MATSUSHIMA <mtsmfm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.7.2"
csv = "1.1"
bytes = "1"
itertools = "0.10"
